# data-analysis-python-2

./: .nojekyll  README.md  _quarto.yml  index.html  index.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
_site/: index.html  search.json
data/: blobs.csv  correlation.py  fitting.py  hyperparam.py  knn.py  testing.py
extra/: Image_analysis_FINAL.html  Image_analysis_v1.html  JGI-data-analysis-stretch-VD.html  JGI-data-analysis-stretch-ZP.html  Proteomics_Stretch_Goal_Draft_March_NPTX2.html  Proteomics_Stretch_Goal_Draft_March_NPTX2.qmd  Proteomics_Stretch_Goal_NPTX2.html  Proteomics_Stretch_Goal_NPTX2.qmd  feature-importance-analysis.html  feature-importance-analysis.qmd  feature-importance-analysis.quarto_ipynb  logistic-regression-cancer.html  logistic-regression-cancer.qmd  logistic-regression-cancer.quarto_ipynb  logistic-regression-housing.html  logistic-regression-housing.qmd  logistic-regression-housing.quarto_ipynb  medical-image-clustering.html  medical-image-clustering.qmd  medical-image-clustering.quarto_ipynb  pca-anatomy-arthropods.html  pca-anatomy-arthropods.qmd  pca-morphological-traits.html  pca-morphological-traits.qmd  pca-morphological-traits.quarto_ipynb  prediction-alzheimer-disease.html  prediction-alzheimer-disease.qmd  prediction-alzheimer-disease.quarto_ipynb
pages/: 001-workspace-setup.html  001-workspace-setup.qmd  002-jupyter-notebooks.html  002-jupyter-notebooks.qmd  091-loading-data.html  091-loading-data.qmd  100-fitting-data.html  100-fitting-data.qmd  102-nearest-neighbours.html  200-validation.html  (+69 more)
(+49 files in other folders)
